# inf4710

./: Rapport-INF4710-TP3.docx  ~$pport-INF4710-TP3.docx
Resources/: CMakeLists.txt
Resources/include/: common.hpp  defines.hpp
Resources/src/: appliquerFiltre.cpp  calcArete.cpp  calcCarteForce.cpp  calcConvo.cpp  calcRatio.cpp  lireVideo.cpp  main.cpp
Solution/: CMakeCache.txt  cmake_install.cmake
Solution/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
Solution/INF4710_TP3.build/Debug/ALL_BUILD.build/: Script-08D9B8FAE4E34276947BF1C9.sh  dgph  dgph~
Solution/INF4710_TP3.build/Debug/ZERO_CHECK.build/: Script-BE9EC607B9904679B8E7F5C7.sh  dgph  dgph~
Solution/INF4710_TP3.build/Debug/main.build/: dgph  dgph~
Solution/INF4710_TP3.build/Debug/main.build/Objects-normal/x86_64/: main.LinkFileList  main.d
Solution/INF4710_TP3.build/Debug/tp3_lib.build/: dgph~
Solution/INF4710_TP3.build/Debug/tp3_lib.build/Objects-normal/x86_64/: calcArete.d  calcCarteForce.d  calcConvo.d  calcRatio.d  lireVideo.d  tp3_lib.LinkFileList
Solution/INF4710_TP3.build/Release/ZERO_CHECK.build/: dgph  dgph~
Solution/INF4710_TP3.build/Release/main.build/: dgph
Solution/INF4710_TP3.build/Release/tp3_lib.build/: dgph
Solution/INF4710_TP3.xcodeproj/: project.pbxproj
Solution/INF4710_TP3.xcodeproj/project.xcworkspace/xcuserdata/wilfriedkamga.xcuserdatad/: UserInterfaceState.xcuserstate
Solution/INF4710_TP3.xcodeproj/xcuserdata/wilfriedkamga.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Solution/INF4710_TP3.xcodeproj/xcuserdata/wilfriedkamga.xcuserdatad/xcschemes/: main.xcscheme  xcschememanagement.plist
Solution/include/: defines.hpp
